<resources>
    <string name="app_name">Mafia</string>
    <string name="new_game">Create a game</string>
    <string name="continue_game">Continue Playing</string>
    <string name="rules">Rules</string>
    <string name="settings">Configuration</string>
    <string name="help">Help</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="mafia">Mafia</string>
    <string name="commissar">Commissioner</string>
    <string name="doctor">Doctor</string>
    <string name="peaceful">Civilian</string>
    <string name="player">Player</string>
    <string name="reduce">Reduce the number</string>
    <string name="increase">Increase quantity</string>
    <string name="roles">Roles</string>
    <string name="players">Players</string>
    <string name="players_count">Number of players:</string>
    <string name="don">Don</string>
    <string name="putana">Putana</string>
    <string name="lift">Maniac</string>
    <string name="immortal">Immortal</string>
    <string name="setting_game">Game Settings</string>
    <string name="start_game_label">The game begins</string>
    <string name="start_game_information">The city falls asleep and the host gives out roles</string>
    <string name="no_help">Has nothing to help</string>
    <string name="next">Next</string>
    <string name="see_role">View Player Role</string>
    <string name="remove">Eliminate</string>
    <string name="player_panel">Players Panel</string>
    <string name="peaceful_win">Won peaceful</string>
    <string name="mafia_win">The Mafia Won</string>
    <string name="lift_win">The maniac won</string>
    <string name="end_game">End of game</string>
    <string name="no_save">No saved game</string>
    <string name="exit_game_label">Quit the game?</string>
    <string name="exit_game_description_settings">All game settings will be saved</string>
    <string name="exit_game_description_roles">At this stage, the game will not be saved, and you will not be able to return to it</string>
    <string name="exit_game_description_game">The game will be saved (list of live players) and you can return to it later</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="auto_fill">Fill in player names automatically</string>
    <string name="auto_win">Automatically determine the winner of the game</string>
    <string name="clear_data">Delete Data</string>
    <string name="about_label">About the program</string>
    <string name="about_text">Application "Mafia" - a demostrational, non-commercial application developed by Sviat Kuzbyt in April 2023\n\n<a href="https://github.com/SviatKuzbyt/Mafia-game">GitHub</a>\n<a href="https://www.flaticon.com/">Icons</a>\n<a href="https://www.freepik.com/free-vector/mafia-flat-set-gangster-characters-women-dressed-fashion-30s-20th-century-vector-illustration_35861689.htm#query=mafia%20game%20cast&amp;position=4&amp;from_view=search&amp;track=ais">Roles images</a></string>
    <string name="warning">Look out</string>
    <string name="confirm_clear_data">Are you sure you want to delete the last saved game and the last saved settings?</string>
    <string name="data_cleared">Data deleted successfully</string>
    <string name="enter_name">Enter a name</string>

    <string name="role_lang">Language of roles</string>
    <string name="system">System</string>
    <string name="ua" translatable="false">Українська</string>
    <string name="en" translatable="false" >English</string>

    <string-array name="role_languages">
        <item>@string/system</item>
        <item>@string/ua</item>
        <item>@string/en</item>
    </string-array>
</resources>