<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/closeButtonSettings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/close_ic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/close"/>

    <TextView
        android:id="@+id/textBarSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="@+id/closeButtonSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/closeButtonSettings"
        app:layout_constraintTop_toTopOf="@+id/closeButtonSettings"
        android:textAppearance="@style/basic_bold"/>

    <CheckBox
        android:id="@+id/checkBoxAutoPlayer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/auto_fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeButtonSettings"
        android:textAppearance="@style/basic"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry,VisualLintButtonSize"/>

    <CheckBox
        android:id="@+id/checkBoxAutoWin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/auto_win"
        android:textAppearance="@style/basic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAutoPlayer"
        tools:ignore="RtlSymmetry,VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonClearData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/container_background"
        android:paddingHorizontal="16dp"
        android:text="@string/clear_data"
        android:textAppearance="@style/basic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRolesLang" />

    <TextView
        android:id="@+id/textAboutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/about_label"
        android:textAppearance="@style/basic_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClearData" />

    <TextView
        android:id="@+id/textAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/about_text"
        android:textAppearance="@style/basic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAboutLabel" />

    <Spinner
        android:id="@+id/spinnerRolesLang"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textRole"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxAutoWin"
        android:theme="@style/blue_text"
        android:entries="@array/role_languages"
        />

    <TextView
        android:id="@+id/textRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/role_lang"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerRolesLang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerRolesLang"
        android:textAppearance="@style/basic"/>

</androidx.constraintlayout.widget.ConstraintLayout>